New Features
============

This page summarizes the main new features introduced in each Yii release.

Version 1.1.0
-------------

 * [Added support for writing unit and functional tests](/doc/guide/test.overview)

 * [Added support for using widget skins](/doc/guide/topics.theming#skin)

 * Improved the way of declaring safe model attributes. See
 [Securing Attribute Assignments](/doc/guide/form.model#securing-attribute-assignments).

 * Changed the default eager loading algorithm for relational active record queries so that all tables are joined in one single SQL statement.

 * Changed the default table alias to be the name of active record relations.

 * [Added support for using table prefix](/doc/guide/database.dao#using-table-prefix).


Version 1.0.11
--------------

 * Added support for parsing and creating URLs with parameterized hostnames
     - [Parameterizing Hostnames](/doc/guide/topics.url#parameterizing-hostnames)


Version 1.0.10
--------------

 * Enhanced support for using CPhpMessageSource to manage module messages
     - [Message Translation](/doc/guide/topics.i18n#message-translation)

 * Added support for attaching anonymous functions as event handlers
     - [Component Event](/doc/guide/basics.component#component-event)

Version 1.0.8
-------------

 * Added support for retrieving multiple cached values at one time
	 - [Data Caching](/doc/guide/caching.data)

 * Introduced a new default root path alias `ext` which points to the directory
containing all third-party extensions.
	 - [Using Extensions](/doc/guide/extension.use)

Version 1.0.7
-------------

 * Added support for displaying call stack information in trace messages
     - [Logging Context Information](/doc/guide/topics.logging#logging-context-information)

 * Added `index` option to AR relations so that related objects can be indexed
using the values of a specific column
     - [Relational Query Options](/doc/guide/database.arr#relational-query-options)

Version 1.0.6
-------------
