@@ -13,7 +13,7 @@ where `RootAlias` is the alias of some existing directory. By calling [YiiBase::
 we can define new path aliases.For convenience, Yii predefines the following root aliases:
 
  - `system`: refers to the Yii framework directory;
- - `zii`: refers to the Zii library directory;
+ - `zii`: refers to the [Zii library](/doc/guide/extension.use#zii-extensions) directory;
  - `application`: refers to the application's [base directory](/doc/guide/basics.application#application-base-directory);
  - `webroot`: refers to the directory containing the [entry script](/doc/guide/basics.entry) file. This alias has been available since version 1.0.3.
  - `ext`: refers to the directory containing all third-party [extensions](/doc/guide/extension.overview). This alias has been available since version 1.0.8.
