@@ -59,8 +59,9 @@ class CFormInputElement extends CFormElement
 	);
 
 	/**
-	 * @var string the type of this input. This can be a class name, a path alias of a class name,
+	 * @var string the type of this input. This can be a widget class name, a path alias of a widget class name,
 	 * or a input type alias (text, hidden, password, textarea, file, radio, checkbox, listbox, dropdownlist, checkboxlist, or radiolist).
+	 * If a widget class, it must extend from {@link CInputWidget}.
 	 */
 	public $type;
 	/**
